--- a/src/app/core/components/header-bar/header-bar.component.html
+++ b/src/app/core/components/header-bar/header-bar.component.html
@@ -10,7 +10,7 @@
 
   </ion-title>
   <ion-buttons slot="end" *ngIf="isAuth">
-    <app-notification-icon [newNotifications]="10"></app-notification-icon>
-    <app-chat-icon [newNotifications]="10"></app-chat-icon>
+    <!-- <app-notification-icon ></app-notification-icon> -->
+    <app-chat-icon ></app-chat-icon>
   </ion-buttons>
 </ion-toolbar>
