--- a/src/app/markteplace/pages/chats/chats.page.html
+++ b/src/app/markteplace/pages/chats/chats.page.html
@@ -8,9 +8,12 @@
 </ion-header>
 
 <ion-content>
-  <ion-searchbar placeholder="Buscar"></ion-searchbar>
+  <!-- <ion-searchbar placeholder="Buscar"></ion-searchbar> -->
 
   <ion-list>
+    <div *ngIf="chats.length<1">
+      <ion-badge color="primary">Aun no tienes chats, selecciona desde un producto.</ion-badge>
+    </div>
     <ion-card *ngFor="let chat of chats" (click)="sendMessage(chat._id)">
       <ion-item lines="none">
         <ion-avatar slot="start">
@@ -25,9 +28,9 @@
     </ion-card>
   </ion-list>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="newchat()">
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
-  </ion-fab>
+  </ion-fab> -->
 </ion-content>
