Update product data and archive products

--- a/src/app/markteplace/pages/detail-profile/detail-profile.page.html
+++ b/src/app/markteplace/pages/detail-profile/detail-profile.page.html
@@ -4,8 +4,8 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end"  *ngIf="isAuth">
-      <app-notification-icon [newNotifications]="10"></app-notification-icon>
-      <app-chat-icon [newNotifications]="10"></app-chat-icon>
+      <!-- <app-notification-icon ></app-notification-icon> -->
+      <app-chat-icon ></app-chat-icon>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
