Fixed error load products

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,6 +22,6 @@
   <!-- List Products recomended -->
   <app-recommended-product-list [productsFavorite]="productsFavorite"></app-recommended-product-list>
   <!-- List Product -->
-  <app-list-product-card-big [products]="productsBig"></app-list-product-card-big>
+  <app-list-product-card-big [products]="productsBig" [page]="pageProbig"></app-list-product-card-big>
 </ion-content>
 
