--- a/src/global.scss
+++ b/src/global.scss
@@ -37,3 +37,8 @@
   --ion-color-tg-secondary: #ff5733;
   --ion-color-tg-secondary-contrast: #ffffff;
 }
+
+.top-alert {
+  --top: 0;
+  --border-radius: 0 0 20px 20px;
+}
