--- a/src/app/markteplace/components/product-card-big/product-card-big.component.html
+++ b/src/app/markteplace/components/product-card-big/product-card-big.component.html
@@ -1,21 +1,27 @@
 <ion-card (click)="selectProduc(product.id)">
   <ion-item>
     <ion-avatar item-start>
-      <img src="{{product.profile.photo}}" />
+      <img src="{{ product.profile.photo }}" />
     </ion-avatar>
     <ion-label>
-      <h2 color="dark"><strong>{{product.profile.name}}</strong></h2>
+      <h2 color="dark">
+        <strong>{{ product.profile.name }}</strong>
+      </h2>
       <p class="ion-text-start">
-        <ion-icon name="star"></ion-icon> {{product.profile.rating}}
+        <ion-icon name="star"></ion-icon> {{ product.profile.rating }}
       </p>
     </ion-label>
   </ion-item>
-  <swiper [slidesPerView]="1" [spaceBetween]="2" [pagination]="{
-    clickable: true
-  }" class="mySwiper">
+  <swiper
+    [slidesPerView]="1"
+    [spaceBetween]="2"
+    [pagination]="{
+      clickable: true
+    }"
+    class="mySwiper"
+  >
     <ng-template
       swiperSlide
-      
       *ngFor="let img of product.images"
       class="ion-align-items-stretch"
     >
@@ -23,10 +29,18 @@
     </ng-template>
   </swiper>
   <ion-card-header>
-    <ion-card-subtitle color="dark"><strong>{{ product.name }}</strong></ion-card-subtitle>
+    <ion-card-title *ngIf="product.oldPrice > 0" class="price-desc-title"
+      ><del>{{ product.oldPrice | currency : "Q" }}</del>
+    </ion-card-title>
+    <ion-card-title color="primary" class="price-title">{{
+      product.price | currency : "Q"
+    }}</ion-card-title>
   </ion-card-header>
 
-  <ion-card-content >
+  <ion-card-content>
+    <ion-card-subtitle color="dark"
+      ><strong>{{ product.name }}</strong></ion-card-subtitle
+    >
     <p class="description">{{ product.description }}</p>
   </ion-card-content>
 </ion-card>
