--- a/src/app/markteplace/components/product-card-big/product-card-big.component.scss
+++ b/src/app/markteplace/components/product-card-big/product-card-big.component.scss
@@ -47,3 +47,14 @@
     -webkit-line-clamp: 3; /* number of lines to show */
     -webkit-box-orient: vertical;
  }
+
+ .price-title {
+  text-align: right;
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+
+.price-desc-title {
+  text-align: right;
+  font-size: 0.9rem;
+}
