--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -106,6 +106,10 @@
     background-color: var(--ion-color-tg-secondary);
     color: var(--ion-color-tg-secondary-contrast);
   }
+
+  .top-alert {
+    --background: linear-gradient(#6304cc, #000000);
+  }
   
 
 }
