--- a/src/app/markteplace/pages/chat-list/chat-list.page.html
+++ b/src/app/markteplace/pages/chat-list/chat-list.page.html
@@ -5,25 +5,45 @@
     </ion-buttons>
     <ion-title class="ion-text-left custom-title">
       <div>
-        <img src="{{receiver.photo}}" alt="Avatar de {{receiver.name}}" style="width: 30px; height: 30px; border-radius: 50%;">
+        <img
+          src="{{receiver.photo}}"
+          alt="Avatar de {{receiver.name}}"
+          style="width: 30px; height: 30px; border-radius: 50%"
+        />
         {{receiver.name}}
       </div>
     </ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-toolbar *ngIf="chat.product">
-  <ion-avatar slot="start">
-    <img src="{{image}}" />
-  </ion-avatar>
-  <ion-label>
-    <h3>{{product.name}}</h3>
-    <p>{{ product.price | currency: "Q" }}</p>
-  </ion-label>
+  <ion-card>
+    <ion-card-content>
+      <ion-row>
+        <ion-col size="2">
+          <img
+            src="{{image}}"
+            alt="Foto del producto"
+            style="width: 50px; height: 50px; border-radius: 5px"
+          />
+        </ion-col>
+        <ion-col size="10">
+          <ion-row>
+            <ion-col size="12">
+              <ion-label class="ion-text-wrap">
+                <h2>{{product.name}}</h2>
+                <h2>{{product.price | currency: "Q"}}</h2>
+              </ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-card-content>
+  </ion-card>
 </ion-toolbar>
 
 <ion-content [fullscreen]="true">
   <div class="container">
-    
     <ion-grid class="right">
       <ion-list class="chats">
         <ion-row *ngFor="let m of messages; let i = index">
