--- a/src/app/markteplace/pages/chat-list/chat-list.page.scss
+++ b/src/app/markteplace/pages/chat-list/chat-list.page.scss
@@ -8,6 +8,10 @@
 ion-title.ion-text-left.custom-title div {
   display: flex;
   align-items: center;
+
+  img {
+    margin-right: 10px;
+  }
 }
 .other-message{
     background: #004170;
